# deploying-machine-learning-models

./: pyproject.toml
assignment-section-05/classification_model/processing/: data_manager.py
section-04-research-and-development/titanic-assignment/: 01-predicting-survival-titanic-assignement.ipynb  03-titanic-survival-pipeline-assignment.ipynb
section-05-production-model-package/requirements/: requirements.txt
section-05-titanic-assignment/: setup.py
section-05-titanic-assignment/classification_model/: config.yml  pipeline.py  train_pipeline.py
section-05-titanic-assignment/classification_model/config/: core.py
section-05-titanic-assignment/classification_model/processing/: data_manager.py  features.py
section-05-titanic-assignment/requirements/: requirements.txt  test_requirements.txt
section-05-titanic-assignment/tests/: conftest.py  test_features.py  test_prediction.py
section-07-ci-and-publishing/house-prices-api/: requirements.txt
section-11-deep-learning/: config.py  data_management.py  model.py  pipeline.py  plant_seedlings_classification.py  predict.py  preprocessors.py  train_pipeline.py
