[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.1"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
ipykernel = "^6.9.0"
scipy = "^1.8.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
