[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.5.1"
ipykernel = "^6.9.0"
scipy = "^1.8.0"
sklearn = "^0.0"
feature-engine = "^1.2.0"
tox = "^3.24.5"
pandas = "^1.4.1"
numpy = "^1.22.2"
pydantic = "^1.9.0"
strictyaml = "^1.6.1"
"ruamel.yaml" = "^0.17.21"
typed-ast = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
