[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "section-05-titanic-assignment/classification_model"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
matplotlib = "^3.5.1"
ipykernel = "^6.9.0"
scipy = "^1.8.0"
sklearn = "^0.0"
feature-engine = "^1.2.0"
tox = "^3.24.5"
pandas = "^1.4.1"
numpy = "^1.22.2"
pydantic = "^1.9.0"
strictyaml = "^1.6.1"
"ruamel.yaml" = "^0.17.21"
typed-ast = "^1.5.2"
pytest = "^7.0.1"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
